# TechProgYamgSkrynIst

./: Dockerfile  Doxyfile  README.md  TestCase_Skrynnikova.xlsx  TestCase_Yamgursina.xlsx  test_caesar.cpp  test_hash.cpp
UnitTest/: test_caesar.cpp  test_hash.cpp
client/: CMakeLists.txt  Doxyfile  functionClient.cpp  mainwindow.h  task1_caesar.h  task2_hash.cpp  task2_hash.h  task2_hash.ui
client/doxygen_client/html/: authorization_8h_source.html  class_main_window.html  class_singleton__client.html  class_task1___caesar.html  class_test_caesar_cipher-members.html  class_ui_1_1_main_window-members.html  class_ui_1_1_main_window.html  class_ui_1_1_task1___caesar-members.html  class_ui___main_window.html  class_ui__authorization.html  classes.html  classtask2__hash-members.html  classtask2__hash.html  client__autogen_2_e_w_i_e_g_a46_w_w_2moc__task2__hash_8cpp_source.html  client__autogen_2include_2ui__task2__hash_8h_source.html  dir_0eb28f51ffc0f5eea1d6d0472f04984d.html  dir_2f27842834f1d933b3a380ee35c4827c.html  dir_30507c8efe94ac809d642aa3770a1738.html  dir_b7604214ce2143244b060beab77cb34e.html  dir_f226e7530d7413eed536923a3bc1464e.html  dir_f226e7530d7413eed536923a3bc1464e.js  doxygen_crawl.html  files.html  function_client_8h_source.html  hierarchy.html  moc__mainwindow_8cpp_source.html  struct_q_t___w_a_r_n_i_n_g___d_i_s_a_b_l_e___d_e_p_r_e_c_a_t_e_d_1_1qt__meta__tag___z_n10_main_window_e__t.html  struct_q_t___w_a_r_n_i_n_g___d_i_s_a_b_l_e___d_e_p_r_e_c_a_t_e_d_1_1qt__meta__tag___z_n12_task1___caesar_e__t.html  test__caesar__autogen_2moc__predefs_8h_source.html  test__hash__autogen_2include_2ui__task2__hash_8h_source.html
client/doxygen_client/html/search/: all_0.js  all_4.js  classes_5.js
client/doxygen_client/latex/: annotated.tex  authorization_8h_source.tex  class_main_window.tex  class_task1___caesar.tex  class_test_hash_calculator.eps  class_ui_1_1_main_window.tex  class_ui_1_1_task1___caesar.eps  class_ui_1_1_task1___caesar.tex  class_ui___task1___caesar.eps  classauthorization.eps  classtask2__hash.eps  classtask2__hash.tex  client__autogen_2_e_w_i_e_g_a46_w_w_2moc__task2__hash_8cpp_source.tex  client__autogen_2include_2ui__task2__hash_8h_source.tex  files.tex  mainwindow_8h_source.tex  struct_q_t___w_a_r_n_i_n_g___d_i_s_a_b_l_e___d_e_p_r_e_c_a_t_e_d_1_1qt__meta__tag___z_n10task2__hash_e__t.tex  struct_q_t___w_a_r_n_i_n_g___d_i_s_a_b_l_e___d_e_p_r_e_c_a_t_e_d_1_1qt__meta__tag___z_n12_task1___caesar_e__t.tex  test__hash__autogen_2moc__predefs_8h_source.tex
client/doxygen_client/rtf/: refman.rtf
docs/html/: annotated.html  annotated_dup.js  authorization_8h_source.html  class_main_window.html  class_my_tcp_server-members.html  class_my_tcp_server.html  class_singleton__client-members.html  class_singleton__client.html  class_singleton__client_destroyer-members.html  class_singleton__client_destroyer.html  class_task1___caesar.html  classauthorization.html  classes.html  classtask2__hash.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_41e1742e44e2de38b3bc91f993fed282.js  dir_db3a54907829b36871118d03417739cd.html  dir_db3a54907829b36871118d03417739cd.js  doxygen_crawl.html  files.html  function_client_8h_source.html  hierarchy.html  hierarchy.js  index.html  mainwindow_8h_source.html  mytcpserver_8h_source.html  navtreeindex0.js  singleton__client_8h_source.html  task1__caesar_8h_source.html  task2__hash_8h_source.html
docs/latex/: annotated.tex  authorization_8h_source.tex  class_main_window.tex  class_my_tcp_server.tex  class_singleton__client.tex  class_singleton__client_destroyer.tex  class_task1___caesar.tex  classauthorization.tex  classtask2__hash.tex  files.tex  function_client_8h_source.tex  hierarchy.tex  mainwindow_8h_source.tex  mytcpserver_8h_source.tex  refman.tex  singleton__client_8h_source.tex  task1__caesar_8h_source.tex  task2__hash_8h_source.tex
docs/rtf/: refman.rtf
doxygen_client/html/: annotated.html  annotated_dup.js  class_main_window-members.html  class_singleton__client_destroyer.html  class_task1___caesar-members.html  class_test_caesar_cipher.html  (+53 more)
f/client/: CMakeLists.txt  CMakeLists.txt.user.4a182a8  main.cpp  mainwindow.cpp  singleton_client.cpp  task2_hash.cpp  test_caesar.cpp
server/: Doxyfile  main.cpp  mytcpserver.h  tmp.pro
(+75 files in other folders)
